# Traffic-Light-Detector

./: .gitignore  DESCRIPTION.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/: detect.py  paths.py
src/TrafficLightDetector/: color.py  paths.py  traffic_light_camera.py  traffic_light_detector.py  traffic_light_images.py  traffic_light_webcam.py
src/detector/: detect_traffic_light_color_image.py  extract_traffic_lights.py  object_detection.py  paths.py  train_traffic_light_color.py
tests/: test_package.py
