[metadata]
name = detector
desctiption = Reduce traffic congestion effects due to human reaction times at intersections with traffic lights by utilizing a computer system based on direct communication method of changes in the circumscribed route intersection.
author = Kristofers Solo
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language  :: Python :: 3.10

[options]
packages = detector
install_requires =
    matplotlib>=3.6.2
    opencv-python>=4.6.0.66
    tensorflow>=2.11.0

python_requires = >=3.10
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=6.0.0
    mypy>=0.991
    pytest>=7.2.0
    pytest-cov>=4.0.0
    tox>=3.27.1

[options.package_data]
detector = py.typed

[flake8]
max-line-length = 160
