[metadata]
name = TrafficLightDetector
description = Reduce traffic congestion effects due to human reaction times at intersections with traffic lights by utilizing a computer system based on direct communication method of changes in the circumscribed route intersection.
author = Kristofers Solo
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages = TrafficLightDetector
install_requires =
    PyGObject>=3.42.2
    loguru>=0.6.0
    opencv-python>=4.6.0.66
    playsound>=1.3.0

python_requires = >=3.10
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=6.0.0
    mypy>=0.991
    pytest-cov>=4.0.0
    pytest>=7.2.0
    tox>=3.27.1

[options.package_data]
detector = py.typed

[flake8]
max-line-length = 160
